--- a/Final_Project/.settings/org.eclipse.wst.common.component
+++ b/Final_Project/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
 		<property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="pe"/>
+        <property name="context-root" value="eteam"/>
 	</wb-module>
 </project-modules>
