--- a/Final_Project/src/main/webapp/resources/css/comm/index.css
+++ b/Final_Project/src/main/webapp/resources/css/comm/index.css
@@ -8,17 +8,18 @@
 
 #middle_box1{
 	width:100%;
-	height: 540px;
-	background-image:url(../../img/common/index/backimg1_3.jpg);
+	height: 270px;
+	/* background-image:url(../../img/common/index/backimg1_3.jpg); */
+	background-color: #ef8245;
 	background-size:100%;
-	opacity:0.7;
+
 	
 }
 
 #middle_box2{
 	width:100%;
-	height: 177px;
-	background: lightblue;
+	height: 490px;
+	background-color: #41464d;
 }
 
 #input_box{
