--- a/Final_Project/src/main/webapp/resources/css/comm/index.css
+++ b/Final_Project/src/main/webapp/resources/css/comm/index.css
@@ -6,15 +6,14 @@
 
 #middle{
 	width:100%;
-	height:712px;
-	
+	height:1400px;	
 }
 
 #middle_box1{
 	width:100%;
-	height: 150px;
-	/* background-image:url(../../img/common/index/backimg1_3.jpg); */
-	background-color: #ef8245;
+	height:374px;
+/* 	background-image:url(../../img/common/index/backimg_1.jpg); */
+	background-color: white;
 	background-size:100%;
 
 	
@@ -22,13 +21,20 @@
 
 #middle_box2{
 	width:100%;
-	height: 600px;
+	height: 460px;
+	background-color: white;
+}
+
+#middle_box3{
+	width:100%;
+	height: 460px;
 	background-color: white;
 }
 
 #search_box{
-	width: 25%;
-	padding-top: 4%;
+	width: 26%;
+ 	padding-top: 12%;
+	height:374px;
 	margin:0 auto;
 }
 
@@ -37,12 +43,56 @@
 	margin-left:1%;
 }
 
-#img_box{
-	width: 32%;
-	 margin: 0 auto;
+.spanfont{
+	color:#ef8245;
+}
+
+#fonttype{
+	color:#ef8245;
+}
+
+.form-control{
+	height: 39px;
+	color:#ef8245;
+}
+
+
+.img_box{
+	width: 100%;
+	height: 230px;
+	padding-top:5%;
+}
+
+.placeimg{
+	width:60%;
+	margin:0 auto;
+}
+
+.place{
+	margin-right:14%;
+	float:left;
 }
 
 .img-circle{
-	width:150px;
-	height: 150px;
+	width:200px;
+	height:200px;
 }
+
+.txt_box{
+	width:100%;	
+	height: 95px;
+	 padding-top: 5%;
+}
+
+
+
+.txt_font{
+	width:240px;
+	margin:0 auto;
+	}
+	
+#txt_sub{
+	width:23%;
+	margin:0 auto;
+}
+
