--- a/Final_Project/src/main/webapp/resources/css/comm/index.css
+++ b/Final_Project/src/main/webapp/resources/css/comm/index.css
@@ -6,14 +6,14 @@
 
 #middle{
 	width:100%;
-	height:1400px;	
+	height:1500px;	
 }
 
 #middle_box1{
 	width:100%;
-	height:374px;
+	height:594px;
 /* 	background-image:url(../../img/common/index/backimg_1.jpg); */
-	background-color: white;
+	background-color: darkgrey;
 	background-size:100%;
 
 	
